--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"id": "typst-ts-obsidian",
-	"name": "Typst.ts Obsidian Plugin",
+	"name": "Typst.ts Obsidian",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
 	"description": "Typst rendering support for Obsidian using Typst.ts",
